contrast fix
the label for seach icon issue is on my to-do list now. good night

--- a/style.css
+++ b/style.css
@@ -639,7 +639,8 @@ p.promo-p-two {
       }
 
       .breadcrumbs a {
-        color: #CFA7A5;
+        color: #1B203D;
+        font-style: italic;
       }
 
       .productpagecontainer {
